@@ -38,6 +38,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - bug #2936482 [core] Fix SSL detection.
 + rfe #2937850 [doc] Add some hints to chk_rel.php for quick setup.
 + rfe #2938579 [interface] Add class to some elements for easier theming.
++ rfe #2937840 [doc] Add some interesting configs to config.sample.inc.php.
 
 3.3.0.0 (not yet released)
 + rfe #2308632 [edit] Use hex for (var)binary fields,
